fixed alignment

--- a/src/styles/Row.scss
+++ b/src/styles/Row.scss
@@ -31,12 +31,14 @@
     .back {
       position: absolute;
       z-index: 1;
-      width: 100%;
-      height: 100%;
+      width: 300px;
+      height: 300px;
       display: flex;
       justify-content: center;
       align-items: center;
-      transform: rotateX(180deg);
+      transform: rotateX(180deg) translateY(220px);
+      border-radius: 20px;
+      
       backface-visibility: hidden;
     }
   }
